--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+regex = "1.4"
 
 [[bin]]
 name = "main_01"
 path = "src/main_01.rs"
+
+[[bin]]
+name = "main_02"
+path = "src/main_02.rs"
