--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ path = "src/main_03.rs"
 # requires nightly (`cargo +nightly run` etc.) due to use of str::split_once
 name = "main_04"
 path = "src/main_04.rs"
+
+[[bin]]
+name = "main_05"
+path = "src/main_05.rs"
